fixtures/errors/missing_label.s
.name "Missing label"
.comment "missing label"

init:
    st r1, :ohno
